# caves-forever

./: .gitignore  Cargo.toml  Trunk.toml  attributions.txt  flake.nix  index.html  mines-c22a6d55c2f1899b.js
assets/: worldgen.production.cbor  worldgen.staging.cbor
assets/models/ammo/12GA/: 12GA.color.xcf  12GA.roughness.tga
assets/models/weapon/: shotgun.glb
assets/shaders/CaveMaterialExtension/: fragment.wgsl  types.wgsl  types_forward.wgsl  utility.wgsl  voxels.wgsl
assets/stl/: monkey.stl
assets/textures/: wood_cabinet_worn_long.tga
assets/worldgen/: circle.tunnel.ron  crazy.tunnel.ron  cubic.room.ron  monkey.room.ron  pentalobe.tunnel.ron  test.room.ron  x.tunnel.ron
assetsrc/: brown_planks.xcf  weathered_brown_planks.xcf  wood_cabinet_worn_long.xcf
assetsrc/12GA/: 12GA.blend  12GA.blend1  12GA.color.xcf  12GA.roughness.xcf
assetsrc/556/: 556.blend  556.blend1
assetsrc/9x19/: 9x19.blend  9x19.blend1
assetsrc/Rifle/: rifle.blend  rifle.blend1
assetsrc/SMG/: smg.blend  smg.blend1  smg1.blend  smg1.blend1  smg2.blend  smg2.blend1  smg3.blend  smg3.blend1  smg4.blend  smg4.blend1  smg5.blend  smg5.blend1  smg6.blend  smg6.blend1  smg7.blend  smg7.blend1
assetsrc/SMG/Textures/Grungit/: Material_Grungit.exr  Metal_Grungit.exr
assetsrc/Shotgun/assets/materials/: BAKE.glb  Material.glb  Metal.body.glb  Metal.magazine.glb  Wood.glb  handpaint.glb
assetsrc/Shotgun/bake/: bake3.xcf
assetsrc/Shotgun/blend/: shotgun.blend  shotgun.blend1  shotgun1.blend  shotgun1.blend1  shotgun10.blend  shotgun10.blend1  shotgun11.blend  shotgun11.blend1  shotgun12.blend  shotgun12.blend1  shotgun13.blend  shotgun13.blend1  shotgun14.blend  shotgun14.blend1  shotgun15.blend  shotgun15.blend1  shotgun16.blend  shotgun16.blend1  shotgun17.blend  shotgun17.blend1  shotgun18.blend  shotgun18.blend1  shotgun19.blend  shotgun19.blend1  shotgun2.blend  shotgun2.blend1  shotgun20.blend  shotgun20.blend1  shotgun21.blend  shotgun21.blend1  shotgun22.blend  shotgun22.blend1  shotgun23.blend  shotgun23.blend1  shotgun24.blend  shotgun24.blend1  shotgun25.blend  shotgun25.blend1  shotgun26.blend  shotgun26.blend1  (+36 more)
assetsrc/Shotgun/blend/Textures/Grungit/: Metal001_Grungit.exr  Metal_Grungit.exr  Wood001_Grungit.exr  Wood_Grungit.exr
assetsrc/Shotgun/tex/: color.xcf  color2.xcf  color3.xcf  islands.xcf
docs/assets/shaders/: cave_material.wgsl.old  cave_material.wgsl.working.old
docs/assets/shaders/CaveMaterialExtension/: types_prepass.wgsl  vertex.wgsl
editor/: Cargo.toml
editor/src/: camera.rs  gizmos.rs  lib.rs  main.rs  picking.rs  state.rs  util.rs
editor/src/data/: build.rs  mod.rs  room.rs  tunnel.rs
editor/src/mode/: mod.rs
editor/src/mode/room/: mod.rs  ui.rs  utility.rs
editor/src/mode/tunnel/: mod.rs  ui.rs  utility.rs
editor/src/ui/: mod.rs  vhacd.rs
examples/: cable.rs  debug-worldgen.rs
examples/doors/: Cargo.toml
examples/doors/imported_assets/Default/models/: teapot.glb
examples/doors/imported_assets/Default/textures/: brown_planks.tga  weathered_brown_planks.tga
examples/doors/imported_assets/Default/worldgen/: skinny.tunnel.ron
examples/doors/src/: main.rs
examples/kcc/: Cargo.toml
examples/kcc/imported_assets/Default/shaders/CaveMaterialExtension/: voxels.wgsl
examples/kcc/imported_assets/Default/stl/: default.stl
examples/kcc/imported_assets/Default/textures/: wood.tga  wood_cabinet_worn_long.tga
examples/kcc/imported_assets/Default/worldgen/: boring.tunnel.ron
examples/kcc/src/: grappling_hook.rs  main.rs
examples/kcc/src/player/: camera.rs  config.rs  crouch.rs  input.rs  mod.rs  motion.old.rs  motion.rs  quakeish.rs  utility.rs
examples/kcc/src/player/actions/: crouch.rs  mod.rs  slide.rs
game/: Cargo.toml
game/src/: main.rs
imported_assets/: worldgen.development.ron
imported_assets/models/: kcc.glb
imported_assets/models/ammo/12GA/: 12GA.color.tga  12GA.glb
imported_assets/textures/: brown_planks.tga  weathered_brown_planks.tga  wood.tga  wood_cabinet_worn_long.tga
imported_assets/worldgen/: invalid.room.ron
lib/: Cargo.toml  cable.rs  physics.rs  render_layer.rs
lib/materials/: cave.rs  line.rs
lib/src/: debug_aim.rs  debug_camera.rs  lib.rs  render_layer.rs
lib/src/materials/: cave.rs  line.rs
lib/src/meshgen/: door.rs  mod.rs
lib/src/player/: spawn.rs
lib/src/tnua/: camera.rs  controls.rs
lib/src/weapon/: camera.rs  mod.rs  pickup.rs  weapons.rs
lib/src/worldgen/: layout.rs  mod.rs
lib/src/worldgen/asset/: mod.rs  room.rs  tunnel.rs
lib/src/worldgen/brush/: mod.rs  sweep.rs
lib/src/worldgen/layout/: consts.rs  mod.rs  room.rs  tunnel.rs  utility.rs
lib/src/worldgen/terrain/: boundary.rs  mod.rs  spawn.rs  utility.rs
lib/tnua/: camera.rs
lib/worldgen/terrain/: utility.rs
src/: debug_aim.rs  debug_camera.rs  lib.rs  main.rs
src/materials/: cave.rs  line.rs  mod.rs
src/player/: camera.rs  mod.rs  motion.old
src/tnua/: camera.rs  controls.rs  mod.rs  spawn.rs
src/worldgen/: chunk.rs  layout.rs  mod.rs  terrain.rs  terrain.rs.old  voxel.rs  voxel_materials.rs
src/worldgen/asset/: mod.rs  room.rs  tunnel.rs
src/worldgen/brush/: #collider.rs#  collider.rs  curve.rs  mod.rs  sweep.rs
src/worldgen/terrain/: boundary.rs  change_detection.rs  destroy.rs  fast_surface_nets.rs  mod.rs  remesh.rs  spawn.rs  utility.rs
