[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"

[dependencies]
lib = { path = "../lib" }

anyhow = { workspace = true }
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_egui = { workspace = true }
egui = { workspace = true }
nalgebra = { workspace = true }
noisy_bevy = { workspace = true }
common_macros = { workspace = true }
curvo = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }
rayon = { workspace = true }

bevy_infinite_grid = "0.14.1"
bevy_trackball = { version = "0.9.0", features = ["bevy_egui"] }
meshtext = "0.3.1"
pathfinding = "4.14.0"
ron = "0.8.1"
stl_io = "0.8.3"

# TODO change this when main crate supports bevy 0.15
transform-gizmo-bevy = { git = "https://github.com/UnderbudgetGames/transform-gizmo.git" }

