[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "editor_lib"
path = "./src/lib.rs"

[[bin]]
name = "editor"
path = "./src/bin/editor.rs"

[[bin]]
name = "builder"
path = "./src/bin/builder.rs"  

[dependencies]
lib = { path = "../lib" }

anyhow = { workspace = true }
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_egui = { workspace = true }
egui = { workspace = true }
nalgebra = { workspace = true }
noisy_bevy = { workspace = true }
cbor4ii = { workspace = true }
common_macros = { workspace = true }
curvo = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }
rayon = { workspace = true }
pathfinding = { workspace = true }

rand = { workspace = true }
bevy_rand = { workspace = true }

bevy_infinite_grid = "0.14.1"
bevy_trackball = { version = "0.9.0", features = ["bevy_egui"] }
clap = { version = "4.5.27", features = ["derive"] }
meshtext = "0.3.1"
ron = "0.8.1"
stl_io = "0.8.3"

# TODO change this when main crate supports bevy 0.15
transform-gizmo-bevy = { git = "https://github.com/UnderbudgetGames/transform-gizmo.git" }
tracing = "0.1.41"
walkdir = "2.5.0"
tracing-subscriber = "0.3.19"
bytesize = "1.3.0"

