[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "./lib.rs"

[dependencies]
anyhow = { workspace = true }
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_egui = { workspace = true }
nalgebra = { workspace = true }
noisy_bevy = { workspace = true }
common_macros = { workspace = true }
curvo = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }
rayon = { workspace = true }

bevy-tnua = "0.21.0"
bevy-tnua-avian3d = "0.2.0"
earclip = "1.1.0"
stl_io = "0.8.3"

# fast-surface-nets
glam = "0.29"
ndshape = "0.3"
