[package]
name = "kcc"
version = "0.1.0"
edition = "2021"

[features]
default = [
  "first-person-camera",
  "third-person-camera",
  "jump",
  "crouch",
  "crouch-jump"
]
first-person-camera = []
third-person-camera = []
jump = []
crouch = []
crouch-jump = ["crouch", "jump"]

[dependencies]
lib = { path = "../../lib" }

avian3d = { workspace = true }
bevy = { workspace = true }
bevy_egui = { workspace = true }
noisy_bevy = { workspace = true }
rand = { workspace = true }
bevy_rand = { workspace = true }
